--- a/adventofcode2020/day1/day1.ipynb
+++ b/adventofcode2020/day1/day1.ipynb
@@ -97,26 +97,68 @@
         "with open('/content/day1/day1input.txt', 'r') as input:\n",
         "  for line in input:\n",
         "    item = line.split('\\n')\n",
-        "    entries.append(int(item[0]))\n",
-        "\n",
+        "    entries.append(int(item[0]))"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
         "for i in range(len(entries)):\n",
         "    for j in range(len(entries)):\n",
         "        sum = entries[i] + entries[j]\n",
         "        if(sum) == 2020:\n",
         "            print(entries[i] * entries[j])\n",
         "            break"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
-      "cell_type": "markdown",
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "###--- Part Two ---\n",
+        "\n",
+        "The Elves in accounting are thankful for your help; one of them even offers \n",
+        "you a starfish coin they had left over from a past vacation. They offer you \n",
+        "a second one if you can find **three** numbers in your expense report that meet \n",
+        "the same criteria.\n",
+        "\n",
+        "`1721`\n",
+        "`979`\n",
+        "`366`\n",
+        "`299`\n",
+        "`675`\n",
+        "`1456`\n",
+        "\n",
+        "Using the above example again, the three entries that sum to `2020` are `979`, \n",
+        "`366`, and `675`. Multiplying them together produces the answer, `241861950`.\n",
+        "\n",
+        "In your expense report, **what is the product of the three entries that sum \n",
+        "to `2020`?**"
+      ]
+    },
+    {
+      "source": [
+        "for i in range(len(entries)):\n",
+        "    for j in range(len(entries)):\n",
+        "        for k in range(len(entries)):\n",
+        "            sum = entries[i] + entries[j] + entries[k]\n",
+        "            if(sum) == 2020:\n",
+        "                print(entries[i] * entries[j] * entries[k])\n",
+        "                break"
+      ],
+      "cell_type": "code",
       "metadata": {
         "id": "SjTZnvlksvW2"
       },
-      "source": [
-        ""
-      ]
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
